--- a/order-dev.yml
+++ b/order-dev.yml
@@ -9,6 +9,4 @@ spring:
     password: 123456
     url: jdbc:mysql://192.168.140.134/isell?characterEncoding=utf-8&useSSL=false
 env:
-  dev
-label:
-  release
+  dev2
