--- a/order-dev.yml
+++ b/order-dev.yml
@@ -10,3 +10,6 @@ spring:
     url: jdbc:mysql://192.168.140.134/isell?characterEncoding=utf-8&useSSL=false
 env:
   dev3
+girl:
+  name: lily
+  age: 18  
