--- a/order-dev.yml
+++ b/order-dev.yml
@@ -9,7 +9,7 @@ spring:
     password: 123456
     url: jdbc:mysql://192.168.140.134/isell?characterEncoding=utf-8&useSSL=false
 env:
-  dev31
+  dev311
 girl:
-  name: lily
-  age:  25
+  name: lily1
+  age:  252
