--- a/order-dev.yml
+++ b/order-dev.yml
@@ -8,6 +8,11 @@ spring:
     username: root
     password: 123456
     url: jdbc:mysql://192.168.140.134/isell?characterEncoding=utf-8&useSSL=false
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest  
 env:
   dev311
 girl:
