--- a/order-test.yml
+++ b/order-test.yml
@@ -8,5 +8,10 @@ spring:
     username: root
     password: 123456
     url: jdbc:mysql://192.168.140.134/isell?characterEncoding=utf-8&useSSL=false
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest   
 env:
-  test2
+  test
