--- a/product-dev.yml
+++ b/product-dev.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: order
+    name: product
   jpa:
     show-sql: true
   datasource:
@@ -8,13 +8,3 @@ spring:
     username: root
     password: 123456
     url: jdbc:mysql://192.168.140.134/isell?characterEncoding=utf-8&useSSL=false
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest  
-env:
-  dev311
-girl:
-  name: lily1
-  age:  26
