--- a/product-dev.yml
+++ b/product-dev.yml
@@ -8,3 +8,8 @@ spring:
     username: root
     password: 123456
     url: jdbc:mysql://192.168.140.134/isell?characterEncoding=utf-8&useSSL=false
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest   
