--- a/order-test.yml
+++ b/order-test.yml
@@ -13,5 +13,8 @@ spring:
     port: 5672
     username: guest
     password: guest   
+  redis:
+    host: localhost
+    port: 6379    
 env:
   test
