--- a/user-dev.yml
+++ b/user-dev.yml
@@ -4,7 +4,7 @@ spring:
   jpa:
     show-sql: true
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: 123456
     url: jdbc:mysql://192.168.140.134/isell?characterEncoding=utf-8&useSSL=false
