--- a/order-dev.yml
+++ b/order-dev.yml
@@ -9,12 +9,12 @@ spring:
     password: 123456
     url: jdbc:mysql://192.168.140.134/isell?characterEncoding=utf-8&useSSL=false
   rabbitmq:
-    host: localhost
+    host: 172.16.71.202
     port: 5672
     username: guest
     password: guest  
   redis:
-    host: localhost
+    host: 172.16.71.202
     port: 6379    
 env:
   dev311
